--- a/javascript/.vscode/launch.json
+++ b/javascript/.vscode/launch.json
@@ -9,7 +9,7 @@
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}",
-            "preLaunchTask": "",
+            "preLaunchTask": "compile",
             "runtimeExecutable": null,
             "runtimeArgs": [
                 "--nolazy"
